# agicash

./: .env.example  .env.test  .envrc  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  biome.jsonc  bun.lockb  bunfig.toml  components.json  devenv.nix  devenv.yaml  flake.nix  instrumentation.ts  package.json  react-router.config.ts  tailwind.config.ts  tsconfig.base.json  tsconfig.json  vercel.json  vite-env.d.ts  vite.config.ts
.claude/: IOS_MCP_README.md  settings.json  settings.local.json  tsconfig.json
app/: configuration.ts  entry.client.tsx  entry.server.tsx  environment.mjs  instrument.server.mjs  instrument.server.ts  prerender-paths.ts  query-client.ts  root.tsx  server.ts  tailwind.css  test-setup.ts  tracing-utils.ts
bindings/kotlin/rust/: Cargo.toml  uniffi-bindgen.rs  uniffi.toml
bindings/kotlin/rust/src/: lib.rs
bindings/swift/rust/: Cargo.toml  uniffi-bindgen-swift.rs  uniffi.toml
bindings/swift/rust/src/: lib.rs
certs/: ci-localhost-cert.pem  ci-localhost-key.pem  localhost-cert.pem  localhost-key.pem
crates/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/.cargo/: CACHE_README.md  config.toml
crates/agicash-auth-opensecret/: Cargo.toml
crates/agicash-auth-opensecret/src/: android_storage.rs  browser_storage.rs  client.rs  config.rs  error.rs  key_provider.rs  lib.rs  session.rs  storage.rs  token_provider.rs
crates/agicash-cache/: Cargo.toml
crates/agicash-cache/src/: lib.rs
crates/agicash-cashu/: Cargo.toml
crates/agicash-cashu/src/: dleq.rs  error.rs  lib.rs  provider.rs
crates/agicash-cashu/src/melt_quote/: error.rs  mod.rs  service.rs  state.rs  storage.rs  types.rs
crates/agicash-cashu/src/mint_quote/: error.rs  mod.rs  service.rs  state.rs  storage.rs  types.rs
crates/agicash-cashu/src/receive_flow/: error.rs  mod.rs  service.rs  state.rs  types.rs
crates/agicash-cashu/src/receive_swap/: error.rs  mod.rs  service.rs  state.rs  storage.rs  types.rs
crates/agicash-cashu/src/send_swap/: error.rs  mod.rs  service.rs  state.rs  storage.rs  types.rs
crates/agicash-cashu/tests/: dleq_melt_misordered.rs  dleq_receive.rs
crates/agicash-cli/: Cargo.toml
crates/agicash-cli/src/: account.rs  auth.rs  cli.rs  composition.rs  main.rs  mint.rs  receive.rs  receive_lightning.rs  send.rs  send_lightning.rs  send_lightning_address.rs
crates/agicash-cli/tests/: account_list.rs  auth_lifecycle.rs  auth_logout_idempotent.rs  contracts.rs  help.rs  mint.rs  mint_add_duplicate.rs  mint_nut_unsupported.rs  receive.rs  receive_double_spend.rs  receive_flow.rs  receive_lightning.rs  receive_malformed.rs  send.rs  send_amount_validation.rs  send_lightning.rs  send_v3_format.rs
crates/agicash-cli/tests/common/: mod.rs
crates/agicash-crypto/: Cargo.toml
crates/agicash-crypto/src/: algorithm.rs  lib.rs  mnemonic.rs  public_key.rs  secret_key.rs  signature.rs
crates/agicash-domain/: Cargo.toml
crates/agicash-domain/src/: account.rs  account_purpose.rs  account_state.rs  currency.rs  ids.rs  lib.rs  transaction.rs  user.rs
crates/agicash-exchange-rate/: Cargo.toml
crates/agicash-exchange-rate/src/: lib.rs  mempool.rs  provider.rs
crates/agicash-ffi/: Cargo.toml
crates/agicash-ffi/src/: account.rs  android_tls.rs  error.rs  lib.rs  lightning_address.rs  mint.rs  mint_quote.rs  observability.rs  receive.rs  receive_flow.rs  send.rs  session.rs  user.rs  wallet.rs
crates/agicash-lightning-address/: Cargo.toml
crates/agicash-lightning-address/src/: lib.rs
crates/agicash-money/: Cargo.toml
crates/agicash-money/src/: lib.rs  money.rs  unit.rs
crates/agicash-services/: Cargo.toml
crates/agicash-services/src/: lib.rs
crates/agicash-spark/: Cargo.toml
crates/agicash-spark/src/: lib.rs
crates/agicash-storage-supabase/: Cargo.toml
crates/agicash-storage-supabase-codegen/: Cargo.toml  README.md
crates/agicash-storage-supabase-codegen/src/: main.rs
crates/agicash-storage-supabase/src/: cashu_melt_quote_storage.rs  cashu_mint_quote_storage.rs  cashu_receive_swap_storage.rs  cashu_send_swap_storage.rs  client.rs  config.rs  error.rs  generated.rs  lib.rs  user_storage.rs
crates/agicash-storage-supabase/tests/: cashu_receive_swap_integration.rs  user_storage_integration.rs
crates/agicash-testing/: Cargo.toml
crates/agicash-testing/src/: lib.rs
crates/agicash-traits/: Cargo.toml
crates/agicash-traits/src/: cashu_provider.rs  error.rs  key_options.rs  key_provider.rs  lib.rs  proof_encryption.rs  session_storage.rs  storage_error.rs  token_provider.rs  user_storage.rs
crates/agicash-wallet/: Cargo.toml
crates/agicash-wallet/src/: lib.rs
crates/agicash-wasm/: Cargo.toml
crates/agicash-wasm/src/: lib.rs
crates/agicash-web-leptos/: Cargo.toml  index.html
crates/agicash-web-leptos/public/: manifest.json  service-worker.js
crates/agicash-web-leptos/src/: app.rs  config.rs  lib.rs  main.rs  tokens.rs
crates/agicash-web-leptos/src/auth/: mod.rs
crates/agicash-web-leptos/src/components/: bottom_nav.rs  button.rs  cashu_token_paste_view.rs  currency_toggle.rs  login_view.rs  mod.rs  numpad.rs  protected_layout.rs  send_cashu_view.rs  share_sheet.rs  sheet.rs  toast.rs  wallet_context.rs
crates/agicash-web-leptos/src/pages/: accounts.rs  home.rs  login.rs  mod.rs  receive.rs  receive_cashu.rs  send.rs  settings.rs
crates/agicash-web-leptos/style/: main.css
design/: FONTS.md  MOTION.md  README.md  SOURCES.md  tokens.json
docs/: architecture.md  cashu-error-classifier.md  cashu-error-handling-plan.md  contributing.md  guidelines.md  local-stack.md  migration-from-react.md  sdk-extraction-plan.md  supabase.md  testing.md  wallet-sdk-extraction.md
e2e/: login.spec.ts  signup.spec.ts  verify-email.spec.ts
nix/: DESIGN.md  README.md
patches/: @breeztech%2Fbreez-sdk-spark@0.12.2.patch  @buildonspark%2Fspark-sdk@0.7.1.patch  @buildonspark%2Fspark-sdk@0.7.4.patch  @cashu%2Fcashu-ts@2.6.0.patch  @sentry%2Fcore@10.14.0.patch  @sentry%2Fcore@10.38.0.patch  @sentry%2Freact-router@10.38.0.patch  @supabase%2Frealtime-js@2.15.1.patch  @supabase%2Fsupabase-js@2.56.0.patch  (+3 more)
(+1224 files in other folders)
