[package]
name = "agicash-auth-opensecret"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Native targets get keyring-backed session persistence by default. The
# CLI and existing tests rely on it; turning it off compiles
# `KeyringSessionStorage` out entirely and forces callers onto the
# always-available `InMemorySessionStorage` (used in CI, headless Linux,
# and as the fallback when the OS keyring is unreachable at runtime).
#
# On wasm32 the keyring crate cannot compile, so the feature is implicitly
# off there even if a downstream crate forgets the `default-features = false`
# discipline — see the target-gated `[dependencies]` block below.
default = ["keyring-storage"]
keyring-storage = ["dep:keyring"]
# File-backed encrypted session storage. Used on Android where the
# `keyring` crate ships no backend. The implementation is pure stdlib +
# aes-gcm so it compiles on any target, but the `AndroidFileSessionStorage`
# type is only re-exported on `target_os = "android"` (see storage.rs);
# host targets compile the module for testing only.
android-file-storage = ["dep:aes-gcm"]
# Enable integration tests that hit the real Open Secret dev environment.
# Requires OPENSECRET_BASE_URL and OPENSECRET_CLIENT_ID env vars.
real-opensecret-tests = []

[dependencies]
agicash-domain = { path = "../agicash-domain" }
agicash-crypto = { path = "../agicash-crypto" }
agicash-traits = { path = "../agicash-traits" }
opensecret = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
bip39 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# `getrandom` is already a workspace dep; we use it directly here for
# the AES-256-GCM nonce + key generation in the Android file backend.
# Compiles on every target.
getrandom = { workspace = true }
# AES-256-GCM for the Android file backend. Pulled only when the
# `android-file-storage` feature is enabled.
aes-gcm = { version = "0.10", optional = true }

# Optional dep — only pulled when the `keyring-storage` feature is on.
# keyring itself doesn't compile on wasm; we additionally target-gate
# the dep so a misconfigured downstream can't pull it into a wasm build.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
keyring = { workspace = true, optional = true }
tokio = { workspace = true }

# On wasm, agicash-auth-opensecret still needs tokio macros / sync / time for
# its async surface; the multi-threaded runtime is what we drop.
#
# `web-sys` + `wasm-bindgen` are pulled in for `BrowserSessionStorage`
# (browser_storage.rs), which talks to `window.localStorage` to persist
# the refresh token. We pick only the features the storage backend
# touches — Window + Storage — to keep the wasm bundle tight.
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.42", default-features = false, features = ["macros", "sync", "time"] }
wasm-bindgen = { workspace = true }
web-sys = { version = "0.3", features = ["Window", "Storage"] }

# `wasm-bindgen-test` powers the browser-driven roundtrip tests in
# `browser_storage.rs::tests`. Run with `wasm-pack test --headless
# --chrome crates/agicash-auth-opensecret` (or --firefox / --safari).
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
