[package]
name = "agicash-cashu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agicash-domain = { path = "../agicash-domain" }
agicash-money = { path = "../agicash-money" }
agicash-traits = { path = "../agicash-traits" }
async-trait = { workspace = true }
cdk = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
lightning-invoice = { version = "0.34", default-features = false, features = ["std"] }
parking_lot = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
agicash-domain = { path = "../agicash-domain" }
agicash-money = { path = "../agicash-money" }
chrono = { workspace = true }
dotenvy = { workspace = true }
rust_decimal = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[features]
real-mint-tests = []

[lints]
workspace = true
