[package]
name = "agicash-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agicash"
path = "src/main.rs"

[features]
default = []
# Enable integration tests that hit the real Open Secret dev environment.
real-opensecret-tests = []
# Enable integration tests that hit the real local Supabase instance.
real-supabase-tests = []
# Enable integration tests that hit a real public Cashu mint.
real-mint-tests = ["agicash-cashu/real-mint-tests"]

[dependencies]
agicash-domain = { path = "../agicash-domain" }
agicash-money = { path = "../agicash-money" }
agicash-traits = { path = "../agicash-traits" }
agicash-auth-opensecret = { path = "../agicash-auth-opensecret" }
agicash-cashu = { path = "../agicash-cashu" }
agicash-exchange-rate = { path = "../agicash-exchange-rate" }
agicash-storage-supabase = { path = "../agicash-storage-supabase" }
agicash-wallet = { path = "../agicash-wallet" }
cdk = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
rpassword = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
dotenvy = { workspace = true }
getrandom = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
chrono = { workspace = true }
predicates = { workspace = true }
dotenvy = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
