[package]
name = "agicash-exchange-rate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agicash-domain = { path = "../agicash-domain" }
async-trait = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-float"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[features]
# Network-hitting tests. `cargo test -p agicash-exchange-rate --features real-rate-tests`
real-rate-tests = []

[lints]
workspace = true
