[package]
name = "agicash-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI bindings for the Agicash wallet SDK"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "agicash_ffi"

[dependencies]
agicash-domain = { path = "../agicash-domain" }
agicash-money = { path = "../agicash-money" }
agicash-traits = { path = "../agicash-traits" }
agicash-auth-opensecret = { path = "../agicash-auth-opensecret" }
agicash-storage-supabase = { path = "../agicash-storage-supabase" }
agicash-cashu = { path = "../agicash-cashu" }
agicash-lightning-address = { path = "../agicash-lightning-address" }
async-trait = { workspace = true }
cdk = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread"] }
uniffi = { workspace = true, features = ["tokio"] }
uuid = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# `tracing-oslog` only links on Apple targets (it FFIs into the
# `os_log` C symbols in libSystem). Gate it so the wasm + linux CI
# targets still compile cleanly. On non-Apple targets the FFI install
# falls back to a `tracing-subscriber` fmt layer.
[target.'cfg(target_vendor = "apple")'.dependencies]
tracing-oslog = { workspace = true }

# Android-only: the platform certificate verifier needs a JVM + Context
# handle before it can validate TLS chains. Initialized once from
# `MainActivity.onCreate` via the JNI shim in `src/android_tls.rs`. Without
# this init, every `reqwest` call that uses
# `rustls::ClientConfig::with_platform_verifier()` panics with
# "Expect rustls-platform-verifier to be initialized" — iOS does not need
# the same call because `Security.framework` is process-global.
[target.'cfg(target_os = "android")'.dependencies]
rustls-platform-verifier = { workspace = true }
jni = "0.22"

[dev-dependencies]

[lints]
workspace = true
