[package]
name = "agicash-money"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agicash-domain = { path = "../agicash-domain" }
serde = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
