[package]
name = "agicash-storage-supabase"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Enable integration tests that hit the real local Supabase instance.
real-supabase-tests = []

[dependencies]
agicash-domain = { path = "../agicash-domain" }
agicash-traits = { path = "../agicash-traits" }
async-trait = { workspace = true }
postgrest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }

[lints]
workspace = true
