[package]
name = "agicash-storage-supabase"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Enable integration tests that hit the real local Supabase instance.
real-supabase-tests = []

[dependencies]
agicash-cashu = { path = "../agicash-cashu" }
agicash-domain = { path = "../agicash-domain" }
agicash-money = { path = "../agicash-money" }
agicash-traits = { path = "../agicash-traits" }
async-trait = { workspace = true }
base64 = { workspace = true }
cdk = { workspace = true }
hex = { workspace = true }
postgrest = { workspace = true }
sha2 = "0.10"
reqwest = { workspace = true }
rustls = { workspace = true }
rustls-platform-verifier = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
